HelloUltraviolet/Fixtures/RejectedSource/Expressions/ControlExpressionDiagnosticOwnership/Expected.uv
//! Expected diagnostic metadata for the ControlExpressionDiagnosticOwnership rejected-source specimen.

expectedDiagnostic("", "req.16.ControlExpressionDiagnosticOwnership")
